--- a/data/team_members/person/l/luke-duncalfe.yml
+++ b/data/team_members/person/l/luke-duncalfe.yml
@@ -3,7 +3,7 @@ name: Luke Duncalfe
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer</a>,
-  Ecosystem:Integrations
+  Manage:Integrations
 reports_to: arturo-herrero
 picture: luke-duncalfe.png
 twitter: l_d
@@ -13,7 +13,7 @@ departments:
 - Engineering Function
 - Development Department
 - Dev Section
-- Ecosystem:Integrations BE Team
+- Manage:Integrations BE Team
 projects:
   gitlab: maintainer backend
   gitlab-gollum-lib: reviewer backend
@@ -33,5 +33,4 @@ story: 'Luke is a developer who enjoys everything about programming: the problem
   the learning curves and the creativity. Besides programming, he enjoys experimental
   art and music, camping, playing the piano, and playing with his kids.'
 specialty:
-- 'Ecosystem: Integrations'
-
+- 'Manage: Integrations'
