--- a/data/team_members/person/p/paul-gascou-vaillancourt.yml
+++ b/data/team_members/person/p/paul-gascou-vaillancourt.yml
@@ -3,7 +3,7 @@ name: Paul Gascou-Vaillancourt
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/">Senior Frontend Engineer</a>,
-  Ecosystem:Foundations
+  Manage:Foundations
 reports_to: leipert
 picture: paulgascouvaillancourt.jpg
 twitter:
@@ -12,8 +12,8 @@ departments:
 - Engineering Function
 - Development Department
 - Dev Section
-- Ecosystem:Foundations Team
-- Ecosystem:Foundations FE Team
+- Manage:Foundations Team
+- Manage:Foundations FE Team
 - Frontend
 projects:
   gitlab: reviewer frontend
@@ -25,4 +25,3 @@ story: |
   Paul has been passionate about web development for a while, he likes trying out new languages and libraries whenever he can.
   In his spare time, Paul likes rock climbing, biking, contributing to open source projects and working on digital-art projects.
 specialty: Ecosystem - FE/UX Foundations
-
