--- a/data/team_members/person/r/russelldickenson.yml
+++ b/data/team_members/person/r/russelldickenson.yml
@@ -26,5 +26,4 @@ specialty:
 - 'Secure: Static Analysis'
 - 'Secure: Dynamic Analysis'
 - 'Secure: Composition Analysis'
-- 'Ecosystem: Foundations'
-
+- 'Manage: Foundations'
