--- a/data/team_members/person/s/seggenberger.yml
+++ b/data/team_members/person/s/seggenberger.yml
@@ -21,4 +21,4 @@ projects:
   gitlab-design: maintainer
   design.gitlab.com: maintainer Figma
 specialty:
-- 'Ecosystem: Foundations'
+- 'Manage: Foundations'
