--- a/data/team_members/person/a/ashrafkhamis.yml
+++ b/data/team_members/person/a/ashrafkhamis.yml
@@ -25,7 +25,6 @@ projects:
   omnibus-gitlab: maintainer docs
 specialty:
 - Create:Editor
-- " Ecosystem: Integrations"
+- " Manage: Integrations"
 expertise:
 story:
-
