--- a/data/team_members/person/b/bmarjanovic.yml
+++ b/data/team_members/person/b/bmarjanovic.yml
@@ -3,7 +3,7 @@ name: Bojan Marjanović
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/senior/">Senior Backend
-  Engineer</a>, Ecosystem:Integrations
+  Engineer</a>, Manage:Integrations
 reports_to: arturo-herrero
 picture: bojanmarjanovic.jpg
 pronouns: he/him
@@ -16,17 +16,16 @@ departments:
 - Engineering Function
 - Development Department
 - Dev Section
-- Ecosystem:Integrations BE Team
+- Manage:Integrations BE Team
 projects:
   gitlab:
   - trainee_maintainer backend
   - reviewer backend
 specialty:
-- 'Ecosystem: Integrations'
+- 'Manage: Integrations'
 expertise:
 story: |
   Bojan is an agnostic software engineer passionate about technology, who never gets tired of learning and accepting new challenges.
   He lives his life traveling from place to place, exploring the world and its hidden gems.
   If he stays in one place for too long, he feels restless.
   Routine is a big no for Bojan; to avoid it, he creates his own problems, and then solves them as a true engineer.
-
