--- a/data/team_members/person/j/jayjoshua.yml
+++ b/data/team_members/person/j/jayjoshua.yml
@@ -3,7 +3,7 @@ name: Joseph Joshua
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer</a>,
-  Ecosystem:Integrations
+  Manage:Integrations
 reports_to: arturo-herrero
 picture: jayjoshua.png
 twitter:
@@ -12,10 +12,9 @@ departments:
 - Engineering Function
 - Development Department
 - Dev Section
-- Ecosystem:Integrations BE Team
+- Manage:Integrations BE Team
 story: Joseph has a software development and DevOps background. He loves working on
   open source software and exploring new tech. When not working, he enjoys traveling
   and playing retro video games.
 specialty:
-- 'Ecosystem: Integrations'
-
+- 'Manage: Integrations'
