--- a/data/team_members/person/j/justinho.yml
+++ b/data/team_members/person/j/justinho.yml
@@ -3,7 +3,7 @@ name: Justin Ho
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/frontend/">Senior Frontend Engineer</a>,
-  Ecosystem:Integrations
+  Manage:Integrations
 reports_to: arturo-herrero
 picture: justinho.jpg
 twitter: zamakkat
@@ -14,7 +14,7 @@ departments:
 - Frontend
 - Development Department
 - Dev Section
-- Ecosystem:Integrations FE Team
+- Manage:Integrations FE Team
 - Merge Request Coach
 projects:
   gitlab:
@@ -29,5 +29,4 @@ story: |
   Before joining GitLab, Justin was a full stack software engineer working on everything from front end and back end web development, to software architecture and cloud migration. He likes to use technology to bring excellent products to life that delight users and contribute to the success of the company.<br>
   Outside of work, he likes to plan his next travels, binge-watch TV shows, and read books.
 specialty:
-- 'Ecosystem: Integrations'
-
+- 'Manage: Integrations'
