--- a/data/sections.yml
+++ b/data/sections.yml
@@ -7,6 +7,7 @@ dev:
     - Taurie Davis
     - Marcel van Remmerden
     - Blair Christopher
+    - Chris Micek
   sm: Shaun McCann
   pmm: 
     - Aathira Nair
