--- a/data/team_members/person/m/monica-gomez.yml
+++ b/data/team_members/person/m/monica-gomez.yml
@@ -3,7 +3,7 @@ name: Monica Gomez
 locality:
 country: Remote
 role: <a href="/job-families/sales/field-communications/">Manager, Field Communications</a>
-reports_to: dhong
+reports_to: elikrohn
 picture: monicajacob.png
 twitter: MonicaTJacob
 gitlab: monicaj
