--- a/data/team_members/person/c/christopher-l.yml
+++ b/data/team_members/person/c/christopher-l.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/development/management/#vp-of-development">VP
   of Development</a>
-reports_to: sid
+reports_to: akramer
 picture: christopherlefelhocz.jpg
 twitter:
 gitlab: clefelhocz1
