--- a/data/team_members/person/m/mek.yml
+++ b/data/team_members/person/m/mek.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/engineering-management-quality/#vp-of-quality">Vice
   President of Quality</a>
-reports_to: sid
+reports_to: akramer
 picture: mekstittri.png
 twitter: mekdev
 gitlab: meks
