--- a/data/team_members/person/s/steveloyd.yml
+++ b/data/team_members/person/s/steveloyd.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/infrastructure/engineering-management/#vp-of-infrastructure">VP
   of Infrastructure</a>
-reports_to: sid
+reports_to: akramer
 picture: sloyd.jpg
 twitter:
 gitlab: sloyd
