--- a/data/team_members/person/t/tom-cooney.yml
+++ b/data/team_members/person/t/tom-cooney.yml
@@ -4,7 +4,7 @@ locality:
 country: Remote
 role: <a href="/job-families/engineering/support-management/#vp-of-support">VP of
   Customer Support</a>
-reports_to: sid
+reports_to: akramer
 picture: tomcooney.jpg
 twitter:
 gitlab: tcooney
