--- a/data/team_members/person/j/johnathan-h.yml
+++ b/data/team_members/person/j/johnathan-h.yml
@@ -5,7 +5,7 @@ country: Remote
 role: <a href="/job-families/engineering/security-leadership/#vp-of-security">Vice
   President of Security</a>
 pronouns: he/him
-reports_to: sid
+reports_to: akramer
 picture: johnathanhunt.png
 twitter:
 gitlab: JohnathanHunt
