Apply 1 suggestion(s) to 1 file(s)

--- a/data/release_posts/unreleased/manage-add-commit-email-user-attribute-to-the-api-model-for-users-.yml
+++ b/data/release_posts/unreleased/manage-add-commit-email-user-attribute-to-the-api-model-for-users-.yml
@@ -1,7 +1,7 @@
 ---
 features:
   secondary:
-  - name: "'Commit email' user attribute writeable via API"
+  - name: "Modify user's commit email through the Users API"
     available_in: [core, premium, ultimate]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/api/users.html'
