Apply 1 suggestion(s) to 1 file(s)

--- a/data/release_posts/unreleased/manage-add-commit-email-user-attribute-to-the-api-model-for-users-.yml
+++ b/data/release_posts/unreleased/manage-add-commit-email-user-attribute-to-the-api-model-for-users-.yml
@@ -4,7 +4,7 @@ features:
   - name: "Modify user's commit email through the Users API"
     available_in: [core, premium, ultimate]
     gitlab_com: true
-    documentation_link: 'https://docs.gitlab.com/ee/api/users.html'
+    documentation_link: 'https://docs.gitlab.com/ee/api/users.html#user-modification'
     reporter: hsutor
     stage: manage
     categories:
