--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -13,3 +13,9 @@ tertiary:
       - [Container Registry only showing 100 tags per image](https://gitlab.com/gitlab-org/gitlab/-/issues/359277).
       - [NuGet packages with uppercase characters cannot be found](https://gitlab.com/gitlab-org/gitlab/-/issues/273664).
       - [Group permissions do not allow project moves between namespaces](https://gitlab.com/gitlab-org/gitlab/-/issues/296817)
+      - [Allow custom logo for login page](https://gitlab.com/gitlab-org/gitlab/-/issues/375269)
+      - [Fix empty password submitting failure on admin editing user page](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/99042)
+      - [Invalid current password error not set when 2FA setting is on for group](https://gitlab.com/gitlab-org/gitlab/-/issues/346494)
+      - [Fix crash if createAlert dismissed multiple times](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/99494)
+      
+
