--- a/data/release_posts/unreleased/plan-update-default-insights-config-file-to-include-dora.yml
+++ b/data/release_posts/unreleased/plan-update-default-insights-config-file-to-include-dora.yml
@@ -11,6 +11,6 @@ features:
     - 'Value Stream Management'
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/371867'
     description: |
-      Following the [recent release of the new DORA Insights custom reporting](https://about.gitlab.com/releases/2022/08/22/gitlab-15-3-released/#dora-custom-reporting-for-data-driven-software-development-improvements), we have added to the default insights config file a pre-defined DORA overtime comparison report. This report visuzlaie the performance of the 4 DORA metrics over the past 180 days in monthly and daily aggregation.
+    Following the [recent release of the new DORA Insights custom reporting](https://about.gitlab.com/releases/2022/08/22/gitlab-15-3-released/#dora-custom-reporting-for-data-driven-software-development-improvements), we have added a pre-defined report to the default insights configuration file. The new report visualizes the performance of the four DORA metrics over the past 180 days, aggregated by month and day.
 
-      With this enhancement, users can quickly learn the DORA framework, understand how to use the metrics, and see how they work with real data.
+      This report helps you learn the DORA framework, understand how to use the metrics, and see how they perform over time on real data.
