doc: Update team name in justintobler.yml

--- a/data/team_members/person/j/justintobler.yml
+++ b/data/team_members/person/j/justintobler.yml
@@ -19,7 +19,7 @@ departments:
 - Development Department
 - Enablement Sub-department
 - Gitaly Team
-- Gitaly BE Team
+- Gitaly Cluster Team
 specialty: 'Create: Gitaly'
 expertise:
 story: |
