Add Configure performance improvements

--- a/data/release_posts/unreleased/performance_improvements.yml
+++ b/data/release_posts/unreleased/performance_improvements.yml
@@ -10,5 +10,5 @@ tertiary:
 
       In GitLab 15.5, we're shipping performance improvements for issues, projects, milestones, and much more! Some improvements in GitLab 15.5 are:
 
-      - [Description](https://gitlab.com/gitlab-org/gitlab/-/issues/12345).
+      - [Convert stylesheets/pages/clusters.scss into page specific bundle](https://gitlab.com/gitlab-org/gitlab/-/issues/239803).
       - [Description](https://gitlab.com/gitlab-org/gitlab/-/issues/12345).
