Add UX Researcher for Foundations

--- a/data/stages.yml
+++ b/data/stages.yml
@@ -250,7 +250,7 @@ stages:
           - Austin Regnery
           - Sascha Eggenberger
         uxr:
-          - TBD
+          - Ashley Knobloch
         tech_writer: Russell Dickenson
         appsec_engineer: Dominic Couture
         slack:
