Add Grace Jackson to the team page

--- a/data/team_members/person/g/gjackson5.yml
+++ b/data/team_members/person/g/gjackson5.yml
@@ -3,7 +3,7 @@ locality:
 country: Remote
 role: <a href="">Accounts Receivable Specialist</a>
 reports_to: smccauley
-picture: ../gitlab-logo-extra-whitespace.png
+picture: gracejackson.jpeg
 pronouns:
 pronunciation:
 twitter:
