Apply 1 suggestion(s) to 1 file(s)

--- a/data/release_posts/unreleased/manage-transparent-sso-enforcement-for-group-members.yml
+++ b/data/release_posts/unreleased/manage-transparent-sso-enforcement-for-group-members.yml
@@ -1,7 +1,7 @@
 ---
 features:
   primary:
-  - name: "Transparent SSO enforcement for group members"
+  - name: "Selective SSO enforcement for group members"
     available_in: [premium, ultimate]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/user/group/saml_sso/#sso-enforcement'
