Team page onboarding update

--- a/data/team_members/person/d/david.mauer.yml
+++ b/data/team_members/person/d/david.mauer.yml
@@ -1,16 +1,18 @@
 name: David Mauer
 locality: 
 country: Remote
-role: <a href="">Lead Channel Program Manager</a>
+role: <a href="/job-families/sales/director-channel-programs-and-enablement/">Lead 
+  Channel Program Manager</a>
 reports_to: channels-ed-c
-picture: ../gitlab-logo-extra-whitespace.png
+picture: davidmauer.jpeg
 pronouns:
 pronunciation:
 twitter:
-linkedin:
+linkedin: david-mauer-75098888
 gitlab: david.mauer
 departments:
-  - Channel-Program
+  - Sales
+  - Channels
 specialty: "Channel"
 expertise:
 story:
