Adds department and speciality for MHamda

--- a/data/team_members/person/m/mhamda.yml
+++ b/data/team_members/person/m/mhamda.yml
@@ -10,8 +10,14 @@ twitter:
 linkedin:
 gitlab: mhamda
 departments:
-  - Development
-specialty: "Fulfillment"
+- Engineering Function
+- Development Department
+- Fulfillment Section
+- Fulfillment Sub-department
+- Fulfillment:Utilization Team
+- Fulfillment:Utilization BE Team
+- Backend
+specialty: Utilization
 expertise:
 story:
 
