Attributes for Patrick Cyiza

--- a/data/team_members/person/j/jpcyiza.yml
+++ b/data/team_members/person/j/jpcyiza.yml
@@ -2,7 +2,7 @@
 name: Patrick Cyiza
 locality:
 country: Remote
-role: <a href="">Backend Engineer</a>
+role: <a href="/job-families/engineering/development/backend/">Backend Engineer</a>
 reports_to: sean-carroll
 picture: jpcyiza.jpg
 pronouns: He/His
