--- a/data/team_members/person/j/jpcyiza.yml
+++ b/data/team_members/person/j/jpcyiza.yml
@@ -11,8 +11,11 @@ twitter:
 linkedin: https://be.linkedin.com/in/j-patrick-cyiza-67819291
 gitlab: jpcyiza
 departments:
-- Development
-specialty: 'Create: Editor'
+- Engineering Function
+- Development Department
+- Dev Section
+- Create:Source Code BE Team
+- Merge Request Coach
+specialty:
 expertise:
 story:
-
