Add Stacy Cline to team page

--- a/data/team_members/person/s/slcline.yml
+++ b/data/team_members/person/s/slcline.yml
@@ -1,10 +1,10 @@
 name: Stacy Cline
 locality: 
 country: Remote
-role: <a href="">Senior Director, ESG</a>
+role: <a href="/job-families/legal-and-corporate-affairs/environmental-social-governance/">Senior Director, ESG</a>
 reports_to: robin-schulman
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
+picture: stacycline.jpg
+pronouns: she/her
 pronunciation:
 twitter:
 linkedin:
