--- a/data/team_members/person/p/pcalder.yml
+++ b/data/team_members/person/p/pcalder.yml
@@ -13,7 +13,7 @@ departments:
 - Development Department
 - Growth Section
 - Sec Section
-- Govern Sub-department
+- Data Science Section
 - Merge Request Buddy
 expertise: <li><a href="/handbook/people-group/general-onboarding/mr-buddies/">Merge
   Request Buddy</a></li>
