--- a/data/team_members/person/d/daniel-murphy.yml
+++ b/data/team_members/person/d/daniel-murphy.yml
@@ -14,6 +14,8 @@ departments:
 - Quality Department
 - Contributor Success Team
 - Merge Request Coach
+projects:
+  triage-ops: reviewer
 specialty: ""
 expertise: <li><a href="/job-families/expert/merge-request-coach/">Merge Request Coach</a></li>
 story: Grateful to be a founding member of GitLab's Contributor Success team. I like solving problems and supporting other people. As an open source maintainer, I help grow communities and work with contributors. I love developing in Ruby on Rails but also enjoy working cross functionally with other teams. My life has evolved from my dedication to personal development, volunteering and hypertrophy training.
