--- a/data/release_posts/unreleased/manage-configurable-list-of-things-to-be-imported-that-can-be-adju.yml
+++ b/data/release_posts/unreleased/manage-configurable-list-of-things-to-be-imported-that-can-be-adju.yml
@@ -1,8 +1,7 @@
 ---
 features:
   primary:
-  - name: "Configurable list of things 'to be imported' that can be adjusted by the
-      user"
+  - name: "User can opt-in to import expensive relations from GitHub"
     available_in: [core, premium, ultimate]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/#amazing'
@@ -13,4 +12,4 @@ features:
     - Importers
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/370734'
     description: |
-      When importing project from GitHub, you can now choose which relations, that take a considerable amount of time to be imported, you want to be included in the import. Those relations are: issue and PR (MR) events, thorough notes and release attached files, and by default they are all excluded.
+      Importing all supported relations during project import from GitHub may take a long time. Specifically recenlty implemented [image resources and other attachments types](https://gitlab.com/gitlab-org/gitlab/-/issues/18052), [issue events](https://gitlab.com/groups/gitlab-org/-/epics/7655) and [MR events](https://gitlab.com/groups/gitlab-org/-/epics/7673), as well as import of all [PR and issue comments](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/67150) can take a significant amount of time for large projects. You might not want to import all of those relations to speed up the process. Now you can choose which relations, taking long to be imported, you want to inlcude in the import. By default they are all excluded.
