--- a/data/release_posts/unreleased/manage-configurable-list-of-things-to-be-imported-that-can-be-adju.yml
+++ b/data/release_posts/unreleased/manage-configurable-list-of-things-to-be-imported-that-can-be-adju.yml
@@ -1,6 +1,6 @@
 ---
 features:
-  primary:
+  secondary:
   - name: "User can opt-in to import expensive relations from GitHub"
     available_in: [core, premium, ultimate]
     gitlab_com: true
