--- a/data/team_members/person/l/lee-tickett.yml
+++ b/data/team_members/person/l/lee-tickett.yml
@@ -17,5 +17,5 @@ departments:
 - Merge Request Coach
 - Core Team
 story: Lee adopted GitLab (2017), started contributing (2019), joined the Core team (2020), then joined the Contributor Success team (2022).
-  He enjoys working with both the frontend and backend and loves learning new tools, techniques and technologies. His vision is to help everyone realize GitLab's potential and thaty they too can contribute.
+  He enjoys working with both the frontend and backend and loves learning new tools, techniques and technologies. His vision is to help everyone realize GitLab's potential and that they too can contribute.
   When not working, you'll find him spending time with his family, or kicking back in his retro home bar.
